--- a/package.json
+++ b/package.json
@@ -3,13 +3,40 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "node server",
+    "build": "cross-env NODE_ENV=production next build",
+    "start": "cross-env NODE_ENV=production node server",
+    "start-prod": "npm run build && npm run start",
+    "qa": "npm i && npm run start-prod"
   },
   "dependencies": {
+    "axios": "0.19.2",
+    "express": "4.17.1",
+    "http-proxy-middleware": "1.0.4",
+    "jwt-decode": "2.2.0",
+    "lodash": "4.17.15",
+    "moment": "2.27.0",
     "next": "9.5.2",
+    "next-redux-wrapper": "6.0.2",
+    "querystringify": "2.1.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-calendar": "^3.1.0",
+    "react-dom": "16.13.1",
+    "react-redux": "7.2.0",
+    "react-toastify": "6.0.8",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.8",
+    "redux-persist": "6.0.0",
+    "redux-saga": "1.1.3",
+    "seamless-immutable": "7.1.4",
+    "semantic-ui-calendar-react": "0.15.3",
+    "semantic-ui-css": "2.4.1",
+    "semantic-ui-react": "0.88.2",
+    "styled-components": "5.1.1",
+    "uuid": "^8.3.0"
+  },
+  "devDependencies": {
+    "babel-plugin-styled-components": "1.10.0",
+    "cross-env": "^7.0.2"
   }
 }
