--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "0.19.2",
     "express": "4.17.1",
     "http-proxy-middleware": "1.0.4",
+    "js-file-download": "^0.4.12",
     "jwt-decode": "2.2.0",
     "lodash": "4.17.15",
     "moment": "2.27.0",
