--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^22.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^23.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
     "axios": "0.19.2",
     "express": "4.17.1",
